[package]
name = "strtools"
authors = ["Erik Bünnig <inquiries@epbuennig.me>"]
description = "A library containing various string utilities"
keywords = ["str", "string", "escaping"]
categories = ["algorithms", "parsing", "text-processing"]

repository = "https://github.com/ErikBuennig/strtools/"
license = "MIT"
readme = "README.md"

version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.8"
thiserror = "1.0"
